test/resources/type-checking/good/Return2.cc
void main() {
  double x = 2.0;
  while (x > 0.0) {
    --x;
  }
  return;
}
