test/resources/type-checking/bad/Assignment2.cc
int main() {
  x = (1 + 1);

  return 0;
}
